--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Nick Mayhall"]
 version = "1.0.0-DEV"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
