--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 
 [compat]
+BlockDavidson = "0.1.0"
 julia = "1.7"
 
 [extras]
