--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,24 +42,24 @@ jobs:
       - uses: codecov/codecov-action@v2
         with:
           files: lcov.info
-#  docs:
-#    name: Documentation
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#      statuses: write
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: julia-actions/setup-julia@v1
-#        with:
-#          version: '1'
-#      - uses: julia-actions/julia-buildpkg@v1
-#      - uses: julia-actions/julia-docdeploy@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      - run: |
-#          julia --project=docs -e '
-#            using Documenter: DocMeta, doctest
-#            using PauliOperators
-#            DocMeta.setdocmeta!(PauliOperators, :DocTestSetup, :(using PauliOperators); recursive=true)
-#            doctest(PauliOperators)'
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      statuses: write
+    steps:
+      - uses: actions/checkout@v2
+      - uses: julia-actions/setup-julia@v1
+        with:
+          version: '1'
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-docdeploy@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          julia --project=docs -e '
+            using Documenter: DocMeta, doctest
+            using PauliOperators
+            DocMeta.setdocmeta!(PauliOperators, :DocTestSetup, :(using PauliOperators); recursive=true)
+            doctest(PauliOperators)'
